@@ -19,9 +19,14 @@ java {
     targetCompatibility = JavaVersion.VERSION_15
 }
 
+List<String> runArgs = [
+        "--add-opens", "com.google.gson/com.google.gson.internal=io.sentry"
+        ]
+
 application {
     mainModule = 'com.crschnick.pdx_unlimiter.updater'
     mainClass = 'com.crschnick.pdx_unlimiter.updater.Updater'
+    applicationDefaultJvmArgs = runArgs
 }
 
 repositories {
@@ -32,9 +37,10 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "2.11.3"
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0-alpha1'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation files("$buildDir/generated-modules/commons-io-2.8.0.jar")
     implementation files("$buildDir/generated-modules/commons-lang3-3.11.jar")
-    implementation files("$buildDir/generated-modules/sentry-1.7.30.jar")
+    implementation files("$buildDir/generated-modules/sentry-4.0.0-alpha.2.jar")
 }
 
 addDependenciesModuleInfo {
@@ -64,15 +70,28 @@ addDependenciesModuleInfo {
             '''
         }
         module {
-            artifact 'io.sentry:sentry:1.7.30'
+            artifact 'io.sentry:sentry:4.0.0-alpha.2'
             moduleInfoSource = '''
                 module io.sentry {
-                    exports io.sentry;        
-                    exports io.sentry.context;    
-                    exports io.sentry.event;
-                    requires org.slf4j;
-                    requires java.naming;
-                    requires com.fasterxml.jackson.core;
+                    exports io.sentry;
+                    opens io.sentry to com.google.gson;
+                    
+                    exports io.sentry.protocol to com.google.gson;
+                    opens io.sentry.protocol to com.google.gson;
+                    
+                    exports io.sentry.adapters;
+                    opens io.sentry.adapters to com.google.gson;
+                    
+                    exports io.sentry.config;
+                    opens io.sentry.config to com.google.gson;
+                    
+                    exports io.sentry.transport;
+                    opens io.sentry.transport to com.google.gson;
+                    
+                    exports io.sentry.util;
+                    opens io.sentry.util to com.google.gson;
+                    
+                    requires com.google.gson;
                 }
             '''
         }
@@ -101,6 +120,7 @@ jlink {
             '--no-man-pages']
     launcher {
         name = 'Pdx-Unlimiter'
+        jvmArgs = runArgs
     }
 
     customImage {
